<resources>
    <string name="app_name">charter</string>
    <string name="verified_your_phone_number">Verified Your Phone Number</string>
    <string name="charter_will_send_otp_in_your_phone">Charter will Send OTP message to Verified your phone Number</string>
    <string name="Continue">Continue</string>
    <string name="type_your_phone_number">Type Your Phone Number</string>
    <string name="otp">OTP</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
</resources>