<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".SetupProfileActivity.SetupProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:src="@drawable/avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verified_your_phone_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="6dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/charter_will_send_otp_in_your_phone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textbox_outline"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_outline"
            android:orientation="vertical">
            <EditText
                android:id="@+id/NameEditText"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:inputType="text"
                android:textSize="18sp"
                android:hint="@string/enter_your_name"
                android:background="@drawable/textbox_outline"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />
            <Button
                android:id="@+id/setUpProfileButton"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="@string/setup_profile"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>